<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="roman.com.pillowfort.MainActivity"
    >

    <LinearLayout
        android:id="@+id/activity_main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="16dp"
        android:paddingBottom="@dimen/activity_vertical_margin"
        >

        <ImageView
            android:id="@+id/imageview_logo"
            android:layout_width="256dp"
            android:layout_height="256dp"
            android:layout_gravity="center"
            android:src="@drawable/pillow_fort_logo"
            android:contentDescription="@string/pillowfort_app_logo"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:text="@string/pillowfort_welcome_title"
            android:textSize="32sp"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:gravity="start"
            android:text="@string/pillowfort_description"
            android:textSize="16sp"
            />

        <!--address icon and text-->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:orientation="horizontal"
            >

            <ImageView
                android:id="@+id/imageview_address_icon"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:contentDescription="@string/small_pillowfort_icon"
                android:src="@mipmap/ic_launcher"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="@dimen/activity_horizontal_margin"
                android:gravity="start"
                android:text="@string/pillowfort_address"
                android:textSize="16sp"
                />

        </LinearLayout>

        <!--open hours icon and text-->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:orientation="horizontal"
            >

            <ImageView
                android:id="@+id/imageview_hours_icon"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:contentDescription="@string/small_pillowfort_icon"
                android:src="@mipmap/ic_launcher"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="@dimen/activity_horizontal_margin"
                android:gravity="start"
                android:text="@string/open_hours"
                android:textSize="16sp"
                />
        </LinearLayout>

    </LinearLayout>

</ScrollView>

